--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.scrollbar-custom::-webkit-scrollbar {
+    width: 8px;
+    background-color: #f5f5f5;
+  }
+  
+  .scrollbar-custom::-webkit-scrollbar-thumb {
+    background-color: #4caf50;
+    border-radius: 4px;
+  }
+  
+  .scrollbar-custom::-webkit-scrollbar-thumb:hover {
+    background-color: #45a049;
+  }
+  
+  
