--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,19 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+  
 .scrollbar-custom::-webkit-scrollbar {
-    width: 8px;
+    width: 15px;
     background-color: #f5f5f5;
   }
   
   .scrollbar-custom::-webkit-scrollbar-thumb {
-    background-color: #4caf50;
-    border-radius: 4px;
+    background-color: #42a252;
+    border-radius: 10px;
   }
   
   .scrollbar-custom::-webkit-scrollbar-thumb:hover {
-    background-color: #45a049;
+    background-color: #3b934a;
   }
-  
-  
